# mkutils-py

./: lint  pyproject.toml  venv
src/mkutils/: __init__.py  audio.py  audio_encoder.py  b64_stream.py  base_64_stream.py  buffer.py  cli.py  eleven_labs.py  enum.py  http.py  hume_ai.py  llm.py  logger.py  microphone.py  open_ai.py  process.py  queue.py  sentence_splitter.py  sink.py  string_buffer.py  time.py  tts.py  typing.py  utils.py
