[project]
name = "mkutils"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "httpx>=0.28.1",
    "orjson>=3.11.1",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torchaudio>=2.7.1",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]

[tool.pylint.basic]
good-names = [
    "P"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
extension-pkg-allow-list = [
    "orjson",
]

[tool.pylint.messages_control]
disable = [
    "fixme",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "UP007",
    "UP045",
]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
